--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,13 @@
   box-sizing: border-box;
 }
 
-body {
-  background-color: #f4d467;
+/* body {
+  background-color: #3f5866;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 .card-container {
-  background-image: url("./assets/nba.jpg");
+  background-image: url("./assets/Scient.webp");
   background-size: 100% 100%;
   background-repeat: no-repeat;
   min-height: 400px;
-}
+} */
