useState,dataFiltered,Event

--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: white;
 }
 
-/* body {
-  background-color: #3f5866;
+body {
+  background-color: #123240;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 .card-container {
@@ -13,4 +14,4 @@
   background-size: 100% 100%;
   background-repeat: no-repeat;
   min-height: 400px;
-} */
+}
