--- a/src/index.css
+++ b/src/index.css
@@ -13,5 +13,17 @@ body {
   background-image: url("./assets/Scient.webp");
   background-size: 100% 100%;
   background-repeat: no-repeat;
-  min-height: 400px;
+  min-height: 240px;
+}
+
+li {
+  color: black;
+}
+.scientist-card {
+  height: 230px;
+}
+
+.scientist-card:hover {
+  box-shadow: 3px 3px 20px 5px rgba(0, 0, 0, 0.5);
+  transform: scale(0.9);
 }
